# pybind-starter

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/: binding.cpp
python/mymod/: __init__.py
python/tests/: test_calculator.py
src/: CMakeLists.txt  main.cpp  mymod.hpp  pybind.cpp
